# MyPBR

./: CMakeLists.txt  README.md  main.cpp
color/: colorConstants.h  spectrum.h
core/: camera.h  canvas.h  material.h  record.h
doc/: Radiometry.md  chapter5.md  chapter7.md
ext/mygeo/: geo.h  mat.h  vec.h
geometry/: bbox.h  camera.h  canvas.h  instance.h  mesh.h  object.h  primitives.h  ray.h  record.h  shapes.cpp  shapes.h  space.h  transforms.h  utils.h
